[gd_scene load_steps=8 format=3 uid="uid://dbt5m2uyw613v"]

[ext_resource type="PackedScene" uid="uid://dqsee8606d6oh" path="res://character/utils/animation_component/CharacterAnimationComponent.tscn" id="1_0leq7"]
[ext_resource type="Script" path="res://character/enemy/enemy_base/enemy_base.gd" id="1_1ida0"]
[ext_resource type="PackedScene" uid="uid://2kwyre66ftw5" path="res://character/utils/combat_component/CharacterCombatComponent.tscn" id="2_7rtty"]
[ext_resource type="PackedScene" uid="uid://cvvy735hirreb" path="res://character/utils/health_component/character_health_component.tscn" id="3_qvfql"]
[ext_resource type="PackedScene" uid="uid://dg2evnb4w4prs" path="res://character/enemy/enemy_utils/navigation_component/EnemyNavigationComponent.tscn" id="4_a0yix"]
[ext_resource type="PackedScene" uid="uid://da6xrlefp6it5" path="res://character/utils/movement_component/character_movement_component.tscn" id="5_67oyy"]
[ext_resource type="PackedScene" uid="uid://cwnvystjw0v0w" path="res://character/enemy/enemy_utils/currency_component/EnemyCurrencyComponent.tscn" id="7_njoy2"]

[node name="EnemyBase" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 0
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.04
script = ExtResource("1_1ida0")

[node name="CharacterAnimationComponent" parent="." instance=ExtResource("1_0leq7")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterAnimationComponent"]

[node name="CharacterCombatComponent" parent="." instance=ExtResource("2_7rtty")]

[node name="HitBox" type="Area2D" parent="CharacterCombatComponent"]
collision_layer = 4

[node name="HitCollision" type="CollisionShape2D" parent="CharacterCombatComponent/HitBox"]

[node name="CharacterHealthComponent" parent="." instance=ExtResource("3_qvfql")]

[node name="EnemyNavigationComponent" parent="." instance=ExtResource("4_a0yix")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="EnemyNavigationComponent"]
target_desired_distance = 2.0
navigation_layers = 3
path_postprocessing = 1

[node name="CharacterMovementComponent" parent="." instance=ExtResource("5_67oyy")]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="HurtCollision" type="CollisionShape2D" parent="hurtBox"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="EnemyCurrencyComponent" parent="." instance=ExtResource("7_njoy2")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
